--- a/styles/nav-and-logo.css
+++ b/styles/nav-and-logo.css
@@ -21,6 +21,9 @@ div.inline-grid {
     grid-gap: 0.4em;
     width: 80%;
     opacity: 0;
+
+    padding-left: 30px;
+    padding-top: 5px;
 }
 
 a.nav-button {
