--- a/styles/style.css
+++ b/styles/style.css
@@ -42,6 +42,19 @@ h2 {
 	font-style: italic;
 }
 
+h3 {
+	font-size: 1.2em;
+}
+
+h4 {
+	font-size: 1em;
+}
+
+h5 {
+	font-size: 0.9em;
+	font-style: italic;
+}
+
 .title {
 	font-size: 1.25em;
 	color: #eeeeee;
@@ -50,6 +63,7 @@ h2 {
 ul {
 	list-style: none;
 	padding-left: 0em;
+	padding-right: 5px;
 }
 
 li {
@@ -57,8 +71,12 @@ li {
 	text-indent: -1.5em;
 }
 
+.exp-bullet > ul {
+	font-size: 0.8em
+}
+
 li:before {
-	content: "+";
+	content: "-";
 	padding-right: 0.25em;
 }
 
@@ -84,7 +102,7 @@ a:visited {
 }
   
 a:hover {
-	color: black;
+	color: white;
 	text-decoration: none;
 }
    
@@ -177,6 +195,14 @@ div.pic-wrapper {
 
 div.pic-wrapper > img {
 	border-radius: 6px;
+	width:90%;
+	height:90%;
+}
+
+div.pic-wrapper > img.smaller {
+	border-radius: 6px;
+	width:80%;
+	height:80%;
 }
 
 .mini-video {
