--- a/styles/style.css
+++ b/styles/style.css
@@ -27,11 +27,16 @@ h1 {
 	margin: 0;
 }
 
+div.snapshots-title > h1 {
+	padding-top: 0.25em;
+}
+
 div.upcoming > h1 {
 	padding: 0;
 }
 
 div.upcoming {
+	padding-top: 1em;
 	padding-left: 0.8em;
 	padding-bottom: 0.4em;
 }
@@ -69,6 +74,10 @@ ul {
 li {
 	padding-left: 1.5em;
 	text-indent: -1.5em;
+}
+
+.exp-bullet {
+	padding-bottom: 0.25em;
 }
 
 .exp-bullet > ul {
